[gd_scene load_steps=23 format=3 uid="uid://b205vxyasxbjv"]

[ext_resource type="Script" path="res://Scenes/player/player.gd" id="1_taolh"]
[ext_resource type="Texture2D" uid="uid://70dksb6vqe36" path="res://Scenes/player/Nos128.png" id="2_6ygcq"]


[sub_resource type="AtlasTexture" id="AtlasTexture_ynk8v"]
atlas = ExtResource("2_6ygcq")
region = Rect2(0, 0, 85, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_utfgb"]
atlas = ExtResource("2_6ygcq")
region = Rect2(255, 0, 85, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rymd6"]
atlas = ExtResource("2_6ygcq")
region = Rect2(85, 0, 85, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fakxx"]
atlas = ExtResource("2_6ygcq")
region = Rect2(170, 0, 85, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_44ags"]
atlas = ExtResource("2_6ygcq")
region = Rect2(0, 0, 85, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_067rr"]
atlas = ExtResource("2_6ygcq")
region = Rect2(0, 128, 85, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2vwa"]
atlas = ExtResource("2_6ygcq")
region = Rect2(0, 0, 85, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p58qv"]
atlas = ExtResource("2_6ygcq")
region = Rect2(0, 256, 85, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_thn1i"]
atlas = ExtResource("2_6ygcq")
region = Rect2(255, 0, 85, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2k8qp"]
atlas = ExtResource("2_6ygcq")
region = Rect2(255, 128, 85, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u47l2"]
atlas = ExtResource("2_6ygcq")
region = Rect2(255, 256, 85, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bqsjl"]
atlas = ExtResource("2_6ygcq")
region = Rect2(85, 0, 85, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxx81"]
atlas = ExtResource("2_6ygcq")
region = Rect2(85, 128, 85, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gp42c"]
atlas = ExtResource("2_6ygcq")
region = Rect2(85, 256, 85, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ffvq"]
atlas = ExtResource("2_6ygcq")
region = Rect2(170, 0, 85, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_j52vw"]
atlas = ExtResource("2_6ygcq")
region = Rect2(170, 128, 85, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3kya"]
atlas = ExtResource("2_6ygcq")
region = Rect2(170, 256, 85, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_5xjfp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ynk8v")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_utfgb")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rymd6")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fakxx")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_44ags")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_067rr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2vwa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p58qv")
}],
"loop": true,
"name": &"walk_down",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_thn1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2k8qp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_thn1i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u47l2")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqsjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxx81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bqsjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gp42c")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ffvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j52vw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ffvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3kya")
}],
"loop": true,
"name": &"walk_up",
"speed": 7.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rxu4e"]
radius = 22.75
height = 132.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i5lyk"]
radius = 29.0
height = 142.0

[node name="Player" type="CharacterBody2D"]
z_index = 10
y_sort_enabled = true
script = ExtResource("1_taolh")

[node name="printerTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="blarkTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5xjfp")
<<<<<<< Updated upstream
animation = &"idle_down"
=======
animation = &"walk_right"
>>>>>>> Stashed changes

[node name="playerCollision" type="CollisionShape2D" parent="."]
y_sort_enabled = true
position = Vector2(0.25, 32)
scale = Vector2(0.465, 0.465)
shape = SubResource("CapsuleShape2D_rxu4e")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true
radius = 64.0

[node name="Area2D" type="Area2D" parent="."]

[node name="playerContact" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_i5lyk")

[connection signal="blark" from="." to="blarkTimer" method="_on_player_blark"]
[connection signal="timeout" from="printerTimer" to="." method="_on_printer_timer_timeout"]
[connection signal="timeout" from="blarkTimer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
